--- a/static/css/adminRest.css
+++ b/static/css/adminRest.css
@@ -65,6 +65,16 @@ header {
     height: 60px;
     text-align: center;
 }
+.modal-info,
+.modal-edit {
+    padding: 20px;
+    display: none;
+}
+.restedit {
+    width: 100%;
+    height: 40px;
+    margin: 5px;
+}
 .close-modal {
     display: inline-block;
     width: 60px;
