feat : 로고 클릭시 메인으로 이동

--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -2,7 +2,7 @@
 <header>
     <div class="wrapper">
         <div>
-            <a href="">
+            <a href="/">
                 <img src="../static/images/CMM.png" alt="" style="width: auto; height: 200px" />
             </a>
         </div>
