--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -1,7 +1,6 @@
-<link rel="stylesheet" href="/static/css/footer.css" />
 <footer>
     <!-- footer -->
-    <div class="footer-content">
+    <div class="footerContent">
         <div class="logo">
             <img
                 src="../static/images/CMM.png"
@@ -10,26 +9,24 @@
             />
         </div>
 
-        <div class="right-section">
-            <div class="created-by">
-                <h4>만든 사람</h4>
-                <ul>
-                    <li>강혜인</li>
-                    <li>권순모</li>
-                    <li>권태현</li>
-                    <li>진현정</li>
-                </ul>
-            </div>
-            <div class="footerMenu">
-                <h4>메뉴</h4>
-                <ul>
-                    <li>한식</li>
-                    <li>일식</li>
-                    <li>양식</li>
-                    <li>중식</li>
-                    <li>디저트</li>
-                </ul>
-            </div>
+        <div class="createdBy">
+            <h4>만든 사람</h4>
+            <ul>
+                <li>강혜인</li>
+                <li>권순모</li>
+                <li>권태현</li>
+                <li>진현정</li>
+            </ul>
+        </div>
+        <div class="footerMenu">
+            <h4>메뉴</h4>
+            <ul>
+                <li>한식</li>
+                <li>일식</li>
+                <li>양식</li>
+                <li>중식</li>
+                <li>디저트</li>
+            </ul>
         </div>
     </div>
     <p class="copyright">쌍권강진 © 2024. All Rights Reserved</p>
