Feat: CSS 경로 수정

--- a/views/include/head.ejs
+++ b/views/include/head.ejs
@@ -13,3 +13,7 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"
 ></script>
+
+<!-- CSS -->
+<link rel="stylesheet" href="/static/css/header.css" />
+<link rel="stylesheet" href="/static/css/footer.css" />
