--- a/views/user/idCheckForm.ejs
+++ b/views/user/idCheckForm.ejs
@@ -78,11 +78,11 @@
 
     // 사용하기 버튼을 클릭했을 때 부모 창으로 값 전달
     function sendCheckValue() {
-        if (opener.document.modal_register.idDuplication.value === "idCheck") {
+            opener.document.modal_register.idDuplication.value === "idCheck"
             opener.document.modal_register.id.value = document.getElementById("userId").value;
             opener.chkForm = null;
             self.close();
-        }
+
     }
 </script>
 
