feat: 헤더 css 조정

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -17,7 +17,7 @@
     justify-content: space-between;
     align-items: center;
     width: 1350px;
-    background-color: white;
+    background-color: #ffde59;
     z-index: 2;
 }
 
