feat : 회원가입 오류 해결

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                     <th></th>
                 </tr>
                 <tbody id="restaurantContainer">
-                    <% console.log("레스토랑 정보 >> ",restaurants); %>
+                    <% console.log("레스토랑 정보 >> ",restaurants.restaurant) %>
                     <tr>
                         <% restaurants.forEach((el, index) => { %> <% if (index % 3 === 0 && index
                         !== 0) { %>
