--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -184,6 +184,7 @@
                         <input type="text" name="nickname" class="int" maxlength="20" placeholder="7글자 이하로 작성해주세요."
                             required />
                         <span class="error_next_box"></span>
+                    </span>
                 </div>
 
                 <!-- 이메일 -->
@@ -215,7 +216,7 @@
                 </div>
                 <!-- 회원가입-->
                 <div class="btnArea">
-                    <button type="submit" id="btnJoin" onclick="btnJoin()">
+                    <button type="submit" id="btnJoin">
                         <span>가입하기</span>
                     </button>
                 </div>
@@ -340,12 +341,12 @@
                 },
             })
                 .then((result) => {
+                    console.log(result);
                     if (result) {
                         alert("회원가입 성공!");
                         document.location.href = "/";
                     } else {
-                        alert("중복된 아이디 입니다!");
-                        res.end();
+                        alert("회원가입 실패");
                     }
                 })
                 .catch((err) => {
