feat : 헤더 이미지 링크

--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -2,7 +2,7 @@
     <div class="wrapper">
         <div class="headerLogo">
             <a href="/">
-                <img src="../static/images/CMM.png" alt="" style="width: auto; height: 200px" />
+                <img src="/static/images/CMM.png" alt="" style="width: auto; height: 200px" />
             </a>
         </div>
         <div class="searchResponse" style="z-index: 999">
