--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,14 +37,14 @@
                     <tr>
                         <% } %> <%# } %>
                         <td>
-                            <a href="/restaurantDetail/<#%=restaurants[i].rest_index%>">
+                            <a href="/restaurantDetail/<%=restaurants[i].rest_index%>">
                                 <div class="imageContainer">
                                     <img
                                         src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzEyMDNfMTA1%2FMDAxNzAxNTc1Mzc1MTA4.dN9S9wJppXhDjB9fdVjzf911R91YMES1K8IbCekCMjgg.tYmyq6JD-7LetCAkfz5KQFzEikonrjlL59_LRklghykg.JPEG.jelly877%2F20231203%25A3%25DF115342.jpg"
                                         alt="Restaurant 1"
                                         class="RestaurantImage"
                                     />
-                                    <span class="label"><#%= restaurants[i].rest_name %></span>
+                                    <span class="label"><%= restaurants[i].rest_name %></span>
                                 </div>
                             </a>
                         </td>
