--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -88,7 +88,7 @@
         <div class="modal-content">
             <h2>로그인</h2>
             <div>
-                <img src="../static/images/CMM.png" width="150px" height="200px" />
+                <img src="/static/images/CMM.png" width="150px" height="200px" />
             </div>
             <a href=""><span class="signupLabel" id="closeModalBtn">닫기</span></a>
 
@@ -134,7 +134,7 @@
         <div class="modal-content">
             <h2>회원가입</h2>
             <div>
-                <img src="../static/images/CMM.png" width="150px" height="200px" />
+                <img src="/static/images/CMM.png" width="150px" height="200px" />
             </div>
 
             <a href=""><span class="signupLabel" id="closeLikeBtn">닫기</span></a>
