Update: index.ejs img src 수정

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
                             <a href="/restaurantDetail/<%=restaurants[i].rest_index%>">
                                 <div class="imageContainer">
                                     <img
-                                        src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzEyMDNfMTA1%2FMDAxNzAxNTc1Mzc1MTA4.dN9S9wJppXhDjB9fdVjzf911R91YMES1K8IbCekCMjgg.tYmyq6JD-7LetCAkfz5KQFzEikonrjlL59_LRklghykg.JPEG.jelly877%2F20231203%25A3%25DF115342.jpg"
+                                        src="/static/images/<%=restaurants[i].rest_index%>"
                                         alt="Restaurant 1"
                                         class="RestaurantImage"
                                     />
