Update: index.ejs img src 수정

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
                             <a href="/restaurantDetail/<%=restaurants[i].rest_index%>">
                                 <div class="imageContainer">
                                     <img
-                                        src="/static/images/<%=restaurants[i].rest_index%>"
+                                        src="/static/images/<%=restaurants[i].rest_index%>.png"
                                         alt="Restaurant 1"
                                         class="RestaurantImage"
                                     />
