Update: restDeatil img src 수정

--- a/views/restaurantDetail.ejs
+++ b/views/restaurantDetail.ejs
@@ -16,7 +16,7 @@
         <main>
             <div class="rest">
                 <div class="restImg">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdnvUCVlZTyFm3ylGKkQHUqG54GvkQ9w6S0A&s" alt="식당 이미지">
+                    <img src="/static/images/<%= restaurant.rest_index %>.png" alt="식당 이미지">
                 </div>
                 <div class="restInfo">
                     <div class="restTitle">
