Fix: 식당상세 리뷰 및 작성 부분 수정

--- a/static/css/restDetail.css
+++ b/static/css/restDetail.css
@@ -125,6 +125,10 @@ main {
     padding: 10px;
 }
 
+.review p {
+    margin-top: 10px;
+}
+
 .review .reviewTitle .reviewRating {
     margin-left: 10px;
 }
