--- a/views/include/mypageNav.ejs
+++ b/views/include/mypageNav.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/static/css/mypage.css" />
 <div class="nav">
+    <h1><%= title %></h1>
     <ul>
         <a href="/mypage/likeList"><li>내 좋아요 목록</li></a>
         <a href="/mypage/reviewList"><li>내 리뷰 목록</li></a>
