--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -6,10 +6,10 @@ body {
 
 .nav {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     width: 1350px;
-    height: 100px;
+    height: 80px;
     border-radius: 25px;
     margin-top: 220px;
     margin-bottom: 10px;
@@ -17,7 +17,7 @@ body {
 }
 
 .nav ul {
-    width: 500px;
+    width: 400px;
     display: flex;
     list-style: none;
     justify-content: space-between;
@@ -26,14 +26,14 @@ body {
 
 .nav ul a {
     text-decoration: none;
-    border: 5px solid #8ecdf7;
+    border: 5px solid #ffbf62;
     border-radius: 25px;
 }
 
 .nav ul li {
     width: 100px;
-    height: 60px;
-    line-height: 60px;
+    height: 40px;
+    line-height: 40px;
     text-align: center;
     color: black;
 }
@@ -44,6 +44,7 @@ main {
     border-radius: 25px;
     margin-bottom: 50px;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     /* text-align: center; */
 }
