--- a/views/restaurantDetail.ejs
+++ b/views/restaurantDetail.ejs
@@ -174,6 +174,7 @@
                                             <% } %>
                                         </span>
                                     </div>
+                                    <hr>
                                     <p><%= reviewList[i].review_content%></p>
                                 </div>
                             <% } %>
@@ -191,7 +192,7 @@
                         <%} %>
                         </span>
                     </div>
-                    <textarea class="createReviewContent" name="create_review" cols="92" rows="25"
+                    <textarea maxlength="255" class="createReviewContent" name="create_review" cols="92" rows="3"
                     placeholder="내용을 입력해주세요."
                     ></textarea>
                     <button type="button" onclick="createReview('<%= restaurant.rest_index %>', '<%= isLogin %>')">리뷰 등록하기</button>
