--- a/static/css/likeList.css
+++ b/static/css/likeList.css
@@ -1,7 +1,17 @@
+main {
+    width: 1350px;
+    height: 100%;
+    border-radius: 25px;
+    margin-bottom: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    /* text-align: center; */
+}
+
 .like {
     width: 290px;
     height: 250px;
-    margin: 20px 20px 20px 0;
+    margin: 40px 0 40px 30px;
     position: relative;
 }
 
