--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -73,9 +73,7 @@
                 <button id="signupBtn" class="signBtn">회원가입</button>
                 <button id="loginBtn" class="signBtn">로그인</button>
                 <button class="signBtn">
-                    <a href="/suggestion/list" style="text-decoration: none; color: black"
-                        >건의사항</a
-                    >
+                    <a href="/suggestion/list" style="text-decoration: none; color: black" >건의사항</a>
                 </button>
                 <% } %>
                 <br />
@@ -239,7 +237,7 @@
                             required
                         />
                         <span class="stepbutton"
-                            ><button type="button" id="btnCheckCodeSend" onclick="emailCode()">
+                            ><button type="submit" id="btnCheckCodeSend" onclick="emailCode()">
                                 확인코드전송
                             </button></span
                         >
@@ -315,9 +313,20 @@
     <!-- 이메일 확인 코드 전송 -->
 
     <script>
+        function validateEmail(email) {
+        // 간단한 이메일 형식 유효성 검사
+        const re = /\S+@\S+\.\S+/;
+        return re.test(email);
+    }
+
         function emailCode() {
             const emailInput = document.getElementById("email");
             const emailValue = emailInput.value;
+
+            if (!validateEmail(emailValue)) {
+            alert("올바른 이메일 형식이 아닙니다.");
+            return;
+        }
 
             axios({
                 method: "POST",
@@ -334,12 +343,12 @@
                         // btnEmailCk();
                     } else {
                         alert("메일 전송에 실패하였습니다.");
-                        emailChk.value = "";
                     }
                 })
 
                 .catch((error) => {
                     console.error(error);
+                    alert("서버 오류가 발생했습니다.");
                 });
         }
     </script>
