feat: 브라우저 logo 추가

--- a/views/include/head.ejs
+++ b/views/include/head.ejs
@@ -17,3 +17,6 @@
 <!-- CSS -->
 <link rel="stylesheet" href="/static/css/header.css" />
 <link rel="stylesheet" href="/static/css/footer.css" />
+
+<!-- 브라우저 상단 LOGO -->
+<link rel="icon" type="images/png" href="/static/images/CMM-circle.png">
