--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -37,7 +37,7 @@
             <div>
                 <nav class="menu" style="flex: 0 0 auto; margin-top: -15px">
                     <ul>
-                        <li class="active"><a href="#">홈</a></li>
+                        <li class="active"><a href="/">홈</a></li>
                         <li><a href="/search/category?category=한식">한식</a></li>
                         <li><a href="/search/category?category=일식">일식</a></li>
                         <li><a href="/search/category?category=양식">양식</a></li>
