--- a/views/mypage/profile.ejs
+++ b/views/mypage/profile.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>내 정보</title>
         <%- include('../include/head') %>
-        <link rel="stylesheet" href="/static/css/likeList.css" />
+        <link rel="stylesheet" href="/static/css/profile.css" />
     </head>
     <body>
         <%- include('../include/header'), {isLogin: isLogin, user: user} %> <%-
