--- a/views/mypage/reviewList.ejs
+++ b/views/mypage/reviewList.ejs
@@ -20,7 +20,7 @@
                 <div class="rest">
                     <a href="/restaurantDetail/<%=reviewList[i].rest_index%>">
                     <img
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdnvUCVlZTyFm3ylGKkQHUqG54GvkQ9w6S0A&s"
+                        src="/static/images/<%= reviewList[i].rest_index %>.png"
                         alt="식당 이미지"
                     />
                     </a>
