리뷰리스트 목록 완성, 이 외 기타 수정

--- a/static/css/reviewList.css
+++ b/static/css/reviewList.css
@@ -46,7 +46,11 @@ main {
     flex-direction: column;
     height: 250px;
     align-items: center;
-    margin: 50px 35px 0 30px;
+    margin: 40px 35px 0 30px;
+}
+
+.time {
+    margin-bottom: 20px;
 }
 
 .content {
