--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -3,7 +3,7 @@
     <div class="footerContent">
         <div class="logo">
             <img
-                src="../static/images/CMM.png"
+                src="/static/images/CMM.png"
                 alt="로고 이미지"
                 style="width: 200px; height: 200px"
             />
