--- a/views/admin/adminRestList.ejs
+++ b/views/admin/adminRestList.ejs
@@ -8,28 +8,23 @@
         <title>관리 페이지</title>
     </head>
     <body>
-        <header>
-
-        </header>
-        <nav class="sidebar">
-            <a href="/admin/restaurants">식당 관리</a>
-            <a href="/admin/users">회원 관리</a>
-        </nav>
+        <%- include('./sidebar.ejs') %>
         <main class="admin-main">
-            <h2>식당 관리</h2>
+            <h2>식당 목록</h2>
             <div class="add-rest-div">
-                <button type="button">식당 추가</button>
+                <button type="button" onclick="addPage()">식당 추가</button>
             </div>
             <table class="rest-list-table">
                 <tr>
                     <th>번호</th>
                     <th>식당명</th>
-                    <th colspan="2"></th>
+                    <th colspan="3"></th>
                 </tr>
                 <%for(let i=0; i<restInfo.length; i++){%>
                 <tr>
                     <td><%=restInfo[i].rest_index%></td>
                     <td onclick="openRestInfo('<%=restInfo[i].rest_index%>')"><%=restInfo[i].rest_name%></td>
+                    <td><button type="button" onclick="addMenuPage('<%=restInfo[i].rest_index%>')">메뉴 추가</button></td>
                     <td><button type="button" onclick="openEdit('<%=restInfo[i].rest_index%>')">수정</button></td>
                     <td><button type="button" onclick="deleteRest('<%=restInfo[i].rest_index%>','<%=restInfo[i].rest_name%>')">삭제</button></td>
                 </tr>
@@ -38,7 +33,7 @@
             <div class="restmodal modal-container">
                 <div class="restmodal modal-main">
                     <div class="restmodal modal-info">
-                        <h3 class="restinfo name">식당명</h3>
+                        <h2 class="restinfo name">식당명</h2>
                         <p class="restinfo category">카테고리</p>
                         <p class="restinfo desc">식당정보</p>
                         <p class="restinfo address">식당주소</p>
@@ -83,6 +78,14 @@
                 return result;
             };
 
+            function addPage(){
+                window.location.href = '/admin/addRestaurant';
+            }
+
+            function addMenuPage(idx){
+                window.location.href=`/admin/addRestaurantMenu?rest_index=${idx}`
+            }
+
             async function openRestInfo(idx){
                 modal.style.display = "block";
                 document.querySelector('.modal-info').style.display = "block";
@@ -109,15 +112,22 @@
             async function deleteRest(idx, name){
                 const isDelete = confirm(`식당 ${name}을(를) 삭제하시겠습니까?`);
                 if(isDelete){
-                    const result = await axios({
-                        method:'post',
-                        url:'/admin/deleteRest',
-                        data: {rest_index:idx}                    
-                    });
-                    if(result.data.result===1){
-                        alert('삭제되었습니다.');
-                        location.reload(true);
-                    }else{
+                    try{
+                        const result = await axios({
+                            method:'post',
+                            url:'/admin/deleteRestaurant',
+                            data: {rest_index:idx}                    
+                        });
+                        console.log(result);
+                        if(result.data.isSuccess){
+                            alert('삭제되었습니다.');
+                            location.reload(true);
+                        }else{
+                            alert('접근 권한이 없습니다.');
+                            location.reload(true);
+                        }
+                    }catch(error){
+                        console.log("error!!", error);
                         alert('삭제하지 못했습니다.');
                         location.reload(true);
                     }
@@ -185,11 +195,10 @@
             modalBtn.onclick = () => {
                 modal.style.display = "none";
             }
-            // modal.addEventListener('click', (e)=>{
-            //     console.log(e);
-            //     if(e.target === modal) modal.style.display = "none";
-            // });
-
+            modal.addEventListener('click', (e)=>{
+                console.log(e);
+                if(e.target === modal) modal.style.display = "none";
+            });
         </script>
     </body>
 </html>
